[tool.poetry]
name = "djot-log"
version = "0.1.0"
description = ""
authors = ["alex <alex@pdp7.net>"]
packages = [
    { include = "dl", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ipython = "<8.19"
pytest = "^7.4.3"
black = "^23.12.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
